# Bullarchy

./: Cargo.toml  README.md
frontend/: app.js  index.html  style.css
gui/: go.mod  main.go  panel_blueprint.go  panel_control.go  panel_convert.go  panel_init.go  panel_options.go  panel_packages.go  runner.go
src/: blueprint.rs  bu_generic.h  build.rs  foreign_types.h  lsp.rs  main.rs  readme.rs  routes.rs  typecheck.rs  utils.rs
src/cmd/: cmd_add.rs  cmd_check.rs  cmd_convert.rs  cmd_editor_setup.rs  cmd_fmt.rs  cmd_init.rs  cmd_remove.rs  cmd_update.rs  mod.rs
src/codegen/: codegen.rs  codegen_c.rs  codegen_cpp.rs  codegen_go.rs  codegen_java.rs  codegen_python.rs  mod.rs
src/init/: blueprint.rs  mod.rs
src/stdlib/: abs.rs  args.rs  clamp.rs  close.rs  ends_with.rs  env.rs  exit.rs  exp.rs  fd_in.rs  fd_out.rs  insertion_sort.rs  len.rs  log.rs  max.rs  merge_sort.rs  min.rs  mod.rs  open.rs  parse_i64.rs  pow.rs  powf.rs  quick_sort.rs  radix_sort.rs  replace_str.rs  sleep.rs  sqrt.rs  starts_with.rs  swap.rs  tern.rs  time.rs  to_lower.rs  to_string.rs  to_upper.rs  trim.rs
src/validator/: helpers.rs  inventory.rs  mod.rs  source.rs
