[package]
name    = "bullarchy"
version = "1.0.0"
edition = "2024"

[[bin]]
name = "bullarchy"
path = "src/main.rs"

[dependencies]
rustyline = "14"
bullang     = { git = "https://github.com/The-Bullang-Foundation/Bullang.git" }
pest        = "=2.7.14"
pest_derive = "=2.7.14"
clap        = { version = "=4.4.18", features = ["derive"] }
serde_json  = "1"
